--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@ h2 {
   color: maroon;
 }
 
+h1 {
+    color: blue;
+    text-decoration: darkkhaki;
+    animation-direction: reverse;
+}
+body  {
+    background-color: yellowgreen;
+    text-align: center;
+    text-decoration: wavy;
+}
+
 </style>
 </head>
 <body>
